k8s/production/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service # redis hostname
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
